IE11: fix Card layout broken because it was using CSS grid (https://github.com/woocommerce/woocommerce-admin/pull/370)

--- a/plugins/woocommerce-admin/client/components/card/style.scss
+++ b/plugins/woocommerce-admin/client/components/card/style.scss
@@ -34,6 +34,10 @@
 	}
 }
 
+.woocommerce-card__header-item {
+	@include set-grid-item-position( 3, 3 );
+}
+
 .woocommerce-card__action,
 .woocommerce-card__menu {
 	text-align: right;
